--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </p> 
 <p style="margin-left: 15px"> 
 <a href="https://www.youtube.com/watch?v=GvnL61DAjow" target="_blank"> 
-новости 
+lmao 
 </a> 
 </p> 
 <p style="margin-left: 15px"> 
